styles/sonogram-classifier.scss
@import "constants";

.sonogram-classifier {
	> .player {
		> .image {
			> .sonogram {
				cursor: ns-resize;
			}

			> .frequency-selector {
				> .cover {
					background: transparentize($black, 0.5);
					display: none;
					left: 0;
					position: absolute;
					width: 100%;

					> .handle {
						background: $gray;
						cursor: ns-resize;
						height: 4px;
						position: absolute;
						left: 0;
						width: 100%;
						z-index: 1;
					}

					&.high {
						top: 0;

						> .delete {
							background: transparent;
							border: 0;
							bottom: 10px;
							color: $white;
							cursor: pointer;
							font-weight: bold;
							height: 20px;
							line-height: 20px;
							opacity: 0.5;
							padding: 0;
							position: absolute;
							right: 0;
							text-align: center;
							width: 20px;
							z-index: 2;

							&:hover {
								opacity: 1;
							}
						}

						> .handle {
							bottom: 0;
						}
					}

					&.low {
						bottom: 0;

						> .handle {
							top: 0;
						}
					}
				}

				> .times {
					cursor: ew-resize;
					left: 0;
					pointer-events: none;
					position: absolute;
					width: 100%;

					> .handle {
						background: $gray;
						bottom: -4px;
						cursor: move;
						display: none;
						position: absolute;
						top: -4px;

						&.start {
							right: 100%;
							width: 8px;

							&:after {
								color: $black;
								content: "- - -";
								line-height: 3px;
								overflow: hidden;
								position: absolute;
								top: 45%;
								text: {
									align: center;
									shadow: 0 1px 0 $white;
								}
							}
						}

						&.end {
							left: 100%;
							width: 4px;
						}
					}

					> .time-selector {
						background: transparentize(yellow, 0.67);
						cursor: move;
						height: 100%;
						pointer-events: auto;
						position: absolute;

						> .delete {
							background: transparent;
							border: 0;
							color: $white;
							cursor: pointer;
							font-weight: bold;
							height: 10px;
							line-height: 10px;
							opacity: 0;
							padding: 0;
							position: absolute;
							right: 10px;
							text-align: center;
							top: 5px;
							width: 10px;
							z-index: 1;
						}

						> .handle {
							cursor: ew-resize;
							height: 100%;
							position: absolute;
							top: 0;
							width: 5px;

							&.start {
								left: 0;
							}

							&.end {
								right: 0;
							}
						}

						&:hover {
							> .delete {
								opacity: 0.5;

								&:hover {
									opacity: 1;
								}
							}

							> .handle {
								background: transparentize($gray, 0.5);
							}
						}
					}
				}

				&[data-source="bat"] > .times > .time-selector {
					background: transparentize(#fff, 0.67);
				}

				&[data-source="insect"] > .times > .time-selector {
					background: transparentize(#0f0, 0.67);
				}

				&[data-source="machine"] > .times > .time-selector {
					background: transparentize(#00f, 0.67);
				}

				&.active {
					height: 100%;
					left: 0;
					position: absolute;
					top: 0;
					width: 100%;
					z-index: 1;

					> .cover {
						display: block;
					}

					> .times {
						pointer-events: all;

						> .handle {
							display: block;
						}
					}
				}
			}
		}
	}

	> .classification {
		@include box-sizing(border-box);
		background: transparentize($black, 0.2);
		background: transparentize($black, 0.33);
		border: 2px solid $gray {
			radius: 2px;
		};
		box-shadow: 0 3px 5px $black;
		font: {
			size: 14px;
			weight: bold;
		};
		height: 100%;
		letter-spacing: 1px;
		padding: 20px;
		position: absolute;
		right: 0;
		text: {
			align: center;
			transform: uppercase;
		};
		top: 0;
		width: $quarter-width;

		button {
			@include box-sizing(content-box);
			@include linear-gradient(lighten($gold, 15%), $gold);
			border: 0 {
				top: 1px solid lighten($gold, 30%);
			};
			color: $black;
			cursor: pointer;
			display: inline-block;
			font: {
				family: inherit;
				size: inherit;
				weight: inherit;
			};
			margin: 0.25em 0;
			padding: 5px 0 3px;
			text: {
				align: inherit;
				transform: inherit;
			};
			width: 100%;
		}

		> .workflows {
			> .workflow {
				display: none;

				&.selected {
					display: block;
				}

				> .back {
					margin: 0 0 1em;
				}

				> .question {
					clear: left;
				}

				> .answers {
					margin: 1em 0;

					> .answer {}
				}
			}
		}

		> .continue {
			@include box-sizing(border-box);
			bottom: 0;
			left: 0;
			padding: 20px;
			position: absolute;
			width: 100%;

			> .followup {
				display: none;

				> button {
					width: 45%;
				}
			}

			&.active {
				> button {
					display: none;
				}

				> .followup {
					display: block;
				}
			}
		}
	}
}

